# B

./: .gitignore
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/css/: style.css
frontend/src/: index.html  main.rs
frontend/src/components/: flower.rs  flower_garden.rs  form.rs  image_dir.rs  mod.rs
frontend/src/components/atoms/: image.rs  mod.rs  pass_field.rs  text_field.rs
frontend/src/components/molecules/: form.rs  image.rs  image_card.rs  mod.rs
server/: .env  Cargo.toml  diesel.toml
server/migrations/2024-07-26-222603_create_users/: up.sql
server/src/: api.rs  consts.rs  file.rs  image_dir.rs  main.rs  schema.rs
server/src/database/: connection.rs  mod.rs  primitives.rs  user.rs
storage/public/: README.md
storage/uploads/: README.md
