[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version = "0.7.5", features = ["multipart"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["fs"] }
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
diesel = { version = "2.2.2", features = ["postgres"] }
dotenvy = "0.15.7"
# serde_json = "1.0.120"
